# RISCroll

./: .gitignore  README.md  README_RU.md  pyproject.toml  run_machine.py  tracer.py
.github/workflows/: lint.yml  test.yml
algorithms/: cat.asm  cat_input.txt  euler_problem.asm  hello_user_name.asm  hello_world.asm  macro_showcase.asm  sort.asm  sort_input.txt
machine/: isa.py  logger.py  machine.py  microcode.py  translator.py
non_algos/: test.asm  test_lw.asm  very_little.asm
programs/: cat.asm  cat_input.txt  cat_one.asm  hello_user_name.asm  hello_world.asm  sort.txt  test.asm
programs/non_algos/: test_branching.asm  test_lw_input.txt
test_outputs/hello_world/: final_snapshot.txt
test_outputs/macro_showcase/: final_snapshot.txt
tests/: test_algorithms.py
tests/expected/cat/: final_snapshot.txt
tests/expected/euler_problem/: final_snapshot.txt
tests/expected/hello_user_name/: final_snapshot.txt
tests/expected/sort/: final_snapshot.txt
