[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "C4", "TID", "SIM"]

ignore = [
    "D100", "D101", "D102", "D103",  # docstrings
    "T201",  # allow print()
    "PLR2004",  # magic values (e.g., 42 in tests)
    "E501"  # line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true   # docstring


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true